--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,7 +13,7 @@
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
 		"editor.formatOnSave": true,
-		"prettier.configPath": "prettier.config.js",
+		"prettier.configPath": "prettier.config.js"
 	},
 
 	// Add the IDs of extensions you want installed when the container is created.
