--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "apollo-server": "^3.8.2",
     "graphql": "^16.5.0"
+  },
+  "scripts": {
+    "start": "node server.js"
   }
 }
