--- a/package.json
+++ b/package.json
@@ -7,9 +7,28 @@
   "license": "MIT",
   "dependencies": {
     "apollo-server": "^3.8.2",
-    "graphql": "^16.5.0"
+    "graphql": "^16.5.0",
+    "ts-node": "^10.8.1"
   },
   "scripts": {
     "start": "node src/server.js"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/faker": "^6.6.9",
+    "@types/jest": "^28.1.1",
+    "@types/node": "^17.0.41",
+    "@typescript-eslint/eslint-plugin": "^5.27.1",
+    "@typescript-eslint/parser": "^5.27.1",
+    "babel-jest": "^28.1.1",
+    "babel-plugin-root-import": "^6.6.0",
+    "eslint": "^8.17.0",
+    "faker": "^6.6.6",
+    "jest": "^28.1.1",
+    "prettier": "^2.6.2",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.3"
   }
 }
