--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "ts-node": "^10.8.1"
   },
   "scripts": {
-    "start": "node src/server.js"
+    "start": "node src/server.js",
+    "watch": "ts-node-dev -r tsconfig-paths/register src/server.ts",
+    "test": "jest"
   },
   "devDependencies": {
     "@babel/core": "^7.18.2",
@@ -29,6 +31,7 @@
     "jest": "^28.1.1",
     "prettier": "^2.6.2",
     "ts-node-dev": "^2.0.0",
+    "tsconfig-paths": "^4.0.0",
     "typescript": "^4.7.3"
   }
 }
