--- a/.github/workflows/lint-format.yml
+++ b/.github/workflows/lint-format.yml
@@ -5,7 +5,7 @@ name: Test Pull Request
 
 on:
   push:
-    branches: [ main, develop, kfb/**, bj/**, nk/**, dv/** ]
+    branches: [ main, develop, keith/**, bryan/**, dex/** ]
 
 jobs:
   check-lint:
